added: writing to output file , fix correct arg types for passing in remote method call
need: statistics at the bottom